<resources>
    <string name="app_name">Firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activitynew">MainActivitynew</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_all">Delete All</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="add_user">Add User</string>
</resources>