<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.addUser.AddUserFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivUserImage"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="@color/md_theme_light_primary"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:src="@drawable/baseline_add_a_photo_24"
                    app:shapeAppearanceOverlay="@style/circleImageView" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:hint="@string/name"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAge"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="@dimen/_250sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_16ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btAddUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_user"
                    android:textSize="@dimen/_16ssp" />

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>
</layout>